@@ -21,36 +21,65 @@
 == Code ==
 </wikitext>*/
 
-bwFormManager = function( name )
-{ }
+/*
+ * <input class='yuibutton' .. /> 
+ *   onClick ...
+ * 
+ * 
+ */
 
-bwFormManager.prototype =
+bwFormManagerClass = function( name )
 {
+	var isInit = false; 
+	// wait for the DOM to be ready
+	// and call init method
+	
 
-}; // end class declaration
+};
 
-bwForm = function( name )
-{	this.currentPageName = name; }
-
-bwForm.prototype =
+bwFormManagerClass.prototype =
 {
-
 	/**
-	 *  
+	 *  This method initializes all the relevant DOM objects found
 	 */
-	add: function()
+	init: function()
 	{
-
+		// let's deal with concurrency.
+		if ( this.isInit ) return;
+		this.isInit = true;
+		
+		// scan for elements
+		
+		// 
 	},
 
 	/**
-	 *  
+	 *  This method finds and returns all relevant elements
 	 */
-	paste: function()
+	getElements: function()
 	{
+
 	},
 	
+	/**
+	 *  This method sets the DOM elements with an corresponding
+	 *  'handling' class.
+	 */
+	setElements: function()
+	{
+		
+	},
+	/**
+	 *  This method enables the additional registration of
+	 *  element classes.
+	 */
+	registerClass: function()
+	{
+
+	},
 	
 }; // end class declaration
 
-var bwFormManager = new bwFormManager;
+
+var bwFormManager = new bwFormManagerClass;
+YAHOO.util.Event.onDOMReady( function(){ bwFormManager.init(); } ); 
