@@ -152,3 +152,5 @@ REL1_10_8: (released ...)
 - ForeachFunctions: Minor fixes (removal of some PHP warnings)
 - FileManager: disabled 'auto summary' features upon page creation
 - Added some documentation files
+- PageFunctions: added 'varaset', 'varaget' magic words
+- PageFunctions: added 'PageVarGet' hook
